# shopdeck-monitoring-api

./: README.md  api.py  env.example  main.py  package-lock.json  package.json  pyproject.toml  test_scrape.py  vercel.json
.github/workflows/: auto-scrape.yml  cron.yml  unified-scraper.yml  vipfashion-scraper.yml
api/: index.js
app/: __init__.py  database.py  main.py  models.py  services.py
public/: index.html
utils/: helper.js
