[project]
name = "shopdeck-monitoring-api"
version = "0.1.0"
description = "FastAPI backend for ShopDeck purchase monitoring"
authors = [
    {name = "Chirag", email = "chirag@example.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pymongo>=4.6.0",
    "playwright>=1.40.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]